--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "freactal",
+  "name": "@textpress/freactal",
   "version": "2.0.0",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "build": "rm -rf lib/ && npm run build-lib",
+    "build": "rm -rf lib/ && yarn run build-lib",
     "build-lib": "babel -d lib/ src/",
-    "watch": "nodemon --watch ./src --exec npm run build-lib",
-    "check": "npm run lint && npm run test",
+    "watch": "nodemon --watch ./src --exec yarn run build-lib",
+    "check": "yarn run lint && yarn run test",
     "test": "mocha spec/",
     "lint": "eslint src spec",
-    "preversion": "npm run build"
+    "preversion": "yarn run build",
+    "bump": "gulp bump --part",
+    "ci-build": "yarn build",
+    "ci-test": "yarn test",
+    "ci-release-notes": "conventional-github-releaser -p eslint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/divmain/freactal.git"
-  },
+  "repository": "github:textpress/freactal",
   "files": [
     "lib"
   ],
@@ -34,6 +35,7 @@
     "react": "^15.6.2 || ^16.0.0"
   },
   "devDependencies": {
+    "@textpress/gulp-bump-version": "^0.3.0",
     "babel-cli": "^6.24.0",
     "babel-eslint": "^7.2.1",
     "babel-plugin-transform-react-jsx": "^6.23.0",
@@ -41,12 +43,14 @@
     "chai": "^3.5.0",
     "chai-enzyme": "1.0.0-beta.0",
     "cheerio": "^0.22.0",
+    "conventional-github-releaser": "^2.0.0",
     "enzyme": "^2.8.2",
     "eslint": "^3.18.0",
     "eslint-config-formidable": "^2.0.1",
     "eslint-plugin-filenames": "^1.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.10.3",
+    "gulp": "^3.9.1",
     "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
