--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "react": "^15.6.2 || ^16.0.0"
   },
   "devDependencies": {
+    "@textpress/gulp-bump-version": "^0.5.0",
     "babel-cli": "^6.24.0",
     "babel-eslint": "^7.2.1",
     "babel-plugin-transform-react-jsx": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "chai": "^3.5.0",
     "chai-enzyme": "1.0.0-beta.0",
+    "chalk": "^2.3.2",
     "cheerio": "^0.22.0",
     "conventional-github-releaser": "^2.0.0",
     "enzyme": "^2.8.2",
@@ -49,18 +51,23 @@
     "eslint-plugin-filenames": "^1.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.10.3",
+    "fancy-log": "^1.3.2",
     "gulp": "^3.9.1",
+    "gulp-confirm": "^1.0.8",
+    "gulp-exec": "^3.0.1",
+    "gulp-print": "^5.0.0",
     "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
+    "plugin-error": "^1.0.1",
     "react": "15.6.2",
     "react-dom": "15.6.2",
     "react-test-renderer": "^15.5.4",
     "sinon": "^2.1.0",
-    "sinon-chai": "^2.9.0"
+    "sinon-chai": "^2.9.0",
+    "yargs": "^11.0.0"
   },
   "dependencies": {
-    "@textpress/gulp-bump-version": "^0.4.0",
     "prop-types": "15.6.0"
   }
 }
